--- a/index.html
+++ b/index.html
@@ -18,9 +18,13 @@
 
 
 <div class="row">
-<div class="col">
+<div class="col flexCenter">
+
+<div class="flexCenter title">
 
 
+
+</div>
 
 </div>
 
