Selecting elements in JS and testing inserting images on button press

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
          <div class="godSelection">
 
-
+             <img class="godSelectionIcon" src="" alt="test">
             
          </div>
 
