--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
          <div class="godSelection">
 
-             <img class="godSelectionIcon" src="" alt="test">
+             <img class="godSelectionIcon" src="blank.png" alt="test">
             
          </div>
 
