Removed col from first row for reaching responsiveness

--- a/index.html
+++ b/index.html
@@ -32,19 +32,19 @@
 
 </div>
 <div class="row">
-  <div class="col">
+  <!-- <div class="col"> -->
 
-    <div class="flexCenter fillSpace">
+        <div class="flexCenter fillSpace">
 
-         <div class="godSelection">
+            <div class="godSelection">
 
-             <img class="godSelectionIcon" src="images/blank.png" alt="test">
+                <img class="godSelectionIcon" src="images/blank.png" alt="test">
             
-         </div>
+            </div>
 
-    </div>
+        </div>
     
-  </div>
+  <!-- </div> -->
 
 </div>
 <div class="row">
