--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 
 
 <div class="row">
-<div class="col flexCenter">
+    <!-- did have col here -->
+<div class="flexCenter"> 
 
  <div class="flexCenter title">
 
@@ -32,7 +33,7 @@
 
 </div>
 <div class="row">
-  <!-- <div class="col"> -->
+  <div class="col">
 
         <div class="flexCenter fillSpace">
 
@@ -44,7 +45,7 @@
 
         </div>
     
-  <!-- </div> -->
+  </div>
 
 </div>
 <div class="row">
